#14 Init: 설정 - SASS 변수 설정

--- a/front/src/styles/mixins/_font.scss
+++ b/front/src/styles/mixins/_font.scss
@@ -1,4 +1,4 @@
-@mixin font($fs: $body1, $fw: $regular, $fc: $main-font, $ff: $noto-sans) {
+@mixin font($fs: $body2, $fw: $regular, $fc: $gray, $ff: $noto-sans) {
   font-size: $fs;
   font-weight: $fw;
   color: $fc;
