--- a/front/src/styles/variables/_color.scss
+++ b/front/src/styles/variables/_color.scss
@@ -1,3 +1,9 @@
 // White
-$white: #ffffff;
-$white100: #fcfcfc;
+$white: #f8f8f8;
+
+// gray
+$light-gray: #ececec;
+$gray: #828282;
+
+//black
+$black: #484848;
