--- a/front/src/styles/base/base.scss
+++ b/front/src/styles/base/base.scss
@@ -1,3 +1,25 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 62.5%;
+}
+
+body {
+  font-family: var(--font-noto-sans-kr);
+  margin: 0;
+  user-select: none;
+  -webkit-user-select: none;
+  // 버튼 터치시 나오는 음영 삭제
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  // 링크 롱 터치 막기
+  -webkit-touch-callout: none;
+  -webkit-text-size-adjust: 100%;
+}
+
 button {
   padding: 0;
   outline: none;
@@ -15,18 +37,6 @@ input {
   appearance: none;
   -webkit-appearance: none;
   background: transparent;
-}
-
-body {
-  font-family: var(--font-noto-sans-kr);
-  margin: 0;
-  user-select: none;
-  -webkit-user-select: none;
-  // 버튼 터치시 나오는 음영 삭제
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  // 링크 롱 터치 막기
-  -webkit-touch-callout: none;
-  -webkit-text-size-adjust: 100%;
 }
 
 ul,
