--- a/front/src/styles/variables/_font.scss
+++ b/front/src/styles/variables/_font.scss
@@ -3,9 +3,16 @@ $noto-sans: var(--font-noto-sans-kr);
 $noto-serif: var(--font-noto-serif-kr);
 
 // font size
-$h1: 48px;
+$h1: 2.2rem;
+$h2: 2rem;
+$h3: 1.8rem;
+$body1: 1.4rem;
+$body2: 1.2rem;
+$body3: 1rem;
+$caption: 0.8rem;
 
 // font weight
+$regular: 400;
 $bold: 700;
 
 // letter spacing
