#29 Fix: 수정 - button 컴포넌트 조건부 패딩 추가

--- a/front/src/components/Button/Button.module.scss
+++ b/front/src/components/Button/Button.module.scss
@@ -4,6 +4,10 @@
   border-radius: $radius-button;
   line-height: 1.2rem;
 
+  &.text {
+    padding: 0.3rem 0.5rem;
+  }
+
   &.active {
     color: $white;
     background-color: $gray;
