#36 Fix: 수정 - Global SCSS @font line-height 속성 누락 수정

--- a/front/src/styles/mixins/_font.scss
+++ b/front/src/styles/mixins/_font.scss
@@ -1,5 +1,6 @@
 @mixin font($fs: $body2, $fw: $regular, $fc: $gray, $ff: $noto-sans) {
   font-size: $fs;
+  line-height: $fs * 1.75;
   font-weight: $fw;
   color: $fc;
   font-family: $ff;
