--- a/front/src/components/WordSeed/WordSeed.module.scss
+++ b/front/src/components/WordSeed/WordSeed.module.scss
@@ -6,6 +6,13 @@
   height: 60px;
   background-color: $light-gray;
   border-radius: $radius-button;
+  background-color: white;
+  text-decoration: none;
+  margin-bottom: 0.9rem;
+
+  &:active {
+    background-color: $light-gray;
+  }
 }
 
 .date {
