#48 Fix: 수정 - 폰트 사이즈 수정

--- a/front/src/components/Navbar/search-input/search-input.module.scss
+++ b/front/src/components/Navbar/search-input/search-input.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   gap: 1rem;
+  width: 57.5dvw;
   padding: 0.3rem 1rem;
   position: absolute;
   left: 50%;
@@ -10,7 +11,7 @@
   border-radius: 6px;
 
   input {
-    @include font($fs: $body2, $fw: $regular, $fc: $black, $ff: $noto-sans);
+    @include font($fs: $body1, $fw: $regular, $fc: $black, $ff: $noto-sans);
     line-height: 1.5;
     caret-color: $gray;
   }
