--- a/front/src/components/Button/Button.module.scss
+++ b/front/src/components/Button/Button.module.scss
@@ -1,11 +1,13 @@
 .button {
-  @include font($fs: $body2, $fw: $regular, $fc: $gray, $ff: $noto-sans);
+  @include font($fs: $body1, $fw: $regular, $fc: $gray, $ff: $noto-sans);
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: $white;
   border-radius: $radius-button;
-  line-height: 1.2rem;
 
   &.text {
-    padding: 0.3rem 0.5rem;
+    padding: 0.3rem 0.7rem;
   }
 
   &.active {
