--- a/front/src/components/Navbar/navbar.module.scss
+++ b/front/src/components/Navbar/navbar.module.scss
@@ -1,10 +1,11 @@
 .navbar {
   @include flex;
   justify-content: space-between;
+  align-items: center;
   position: sticky;
   top: 0;
   width: 100%;
-  height: 4rem;
+  height: 5rem;
   padding: 1rem 1.5rem;
   background-color: $white;
 }
@@ -15,23 +16,25 @@
 }
 
 .filter-container {
+  display: flex;
+  align-items: center;
   position: absolute;
   width: 100%;
-  top: 4rem;
+  height: 100%;
+  top: 5rem;
   left: calc(100% / 2);
   transform: translate(-50%, 0%);
   padding: 0 1.5rem;
-  padding-bottom: 0.5rem;
   border-bottom: 0.1px $gray solid;
   background-color: $white;
 }
 
 .date {
-  @include font($fs: $body3, $fw: $regular, $fc: $gray, $ff: $noto-serif);
+  @include font($fs: $body1, $fw: $regular, $fc: $gray, $ff: $noto-serif);
 }
 
 .title {
-  @include font($fs: $body2, $fw: $regular, $fc: $gray, $ff: $noto-sans);
+  @include font($fs: $h1, $fw: $regular, $fc: $gray, $ff: $noto-sans);
   line-height: 1.2rem;
   position: absolute;
   left: 50%;
@@ -39,9 +42,8 @@
 }
 
 .wordseed {
-  @include font($fs: $body1, $fw: $regular, $fc: $black, $ff: $noto-serif);
+  @include font($fs: $h2, $fw: $regular, $fc: $black, $ff: $noto-serif);
   position: absolute;
-  top: 0.75rem;
   left: 50%;
   transform: translate(-50%, 0%);
 }
