--- a/front/src/components/feed-interface/feed-interface.module.scss
+++ b/front/src/components/feed-interface/feed-interface.module.scss
@@ -5,7 +5,9 @@
   align-items: flex-start;
   width: 100%;
   height: 5rem * 1.75;
-  padding: 0 2rem 1rem 2rem;
+  padding: 1rem 2rem 1rem 2rem;
+  position: sticky;
+  bottom: 0px;
 }
 
 .interface-top-container {
