--- a/front/src/components/ContentCard/ContentCard.module.scss
+++ b/front/src/components/ContentCard/ContentCard.module.scss
@@ -1,10 +1,35 @@
+.link {
+  text-decoration: none;
+}
+
 .container {
+  @include shadow-drop1();
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem;
+
+  min-height: 20rem;
+}
+
+.media {
+  @include shadow-drop1();
+  position: relative;
+
+  // 이미지 크기임시 값
+  height: 30rem;
+
+  // z-index 는 임시
+  z-index: -1;
+}
+
+.wrapper {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
-  @include shadow-drop1();
+  gap: 1rem;
 }
 
 .title {
@@ -14,7 +39,6 @@
 .content {
   @include font($body2, $regular, $black, $noto-serif);
   white-space: pre-line;
-  text-align: center;
 }
 
 .start {
@@ -27,4 +51,8 @@
 
 .end {
   text-align: end;
+}
+
+.artist {
+  @include font($body2, $regular, $black, $noto-sans);
 }
