--- a/front/src/components/Button/Button.module.scss
+++ b/front/src/components/Button/Button.module.scss
@@ -15,3 +15,19 @@
     background-color: $gray;
   }
 }
+
+.button-wide {
+  @include font($fs: $body1, $fw: $regular, $fc: $gray, $ff: $noto-sans);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 33dvw;
+  height: 3rem;
+  background-color: $light-gray;
+  border-radius: $radius-button;
+
+  &.active {
+    color: $white;
+    background-color: $gray;
+  }
+}
