#78 feat: 구현 - 버튼 컴포넌트 확장 small type 버튼 추가

--- a/front/src/components/Button/Button.module.scss
+++ b/front/src/components/Button/Button.module.scss
@@ -31,3 +31,18 @@
     background-color: $gray;
   }
 }
+
+.button-small {
+  @include font($fs: $body2, $fw: $regular, $fc: $gray, $ff: $noto-sans);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: $black;
+  background-color: $light-gray;
+  border-radius: $radius-button;
+  padding: 0.2rem 0.7rem;
+
+  &:active {
+    background-color: $gray;
+  }
+}
