--- a/front/src/components/Navbar/create-category/create-category.module.scss
+++ b/front/src/components/Navbar/create-category/create-category.module.scss
@@ -2,6 +2,7 @@
   @include flex;
   justify-content: space-between;
   width: 100%;
+  height: 4rem;
   padding: 0 1.5rem 0.5rem 1.5rem;
   border-bottom: 0.3px $gray solid;
 }
