#86 feat: 구현 - alram 페이지 css 구현 - 이후 기능에 대한 필요조건 - RN에서 FCM 메세지를 수신하는 방법과 그 형식 이해 필요 - RN의 appStorage 사용 방법 이해 필요

--- a/front/src/styles/variables/_font.scss
+++ b/front/src/styles/variables/_font.scss
@@ -6,6 +6,7 @@ $noto-serif: var(--font-noto-serif-kr);
 $h1: 2.2rem;
 $h2: 2rem;
 $h3: 1.8rem;
+$h4: 1.6rem;
 $body1: 1.4rem;
 $body2: 1.2rem;
 $body3: 1rem;
