#85 Feat: 구현 - createContentStore 연결

--- a/front/src/app/create/_component/PostWrite/WriteBody/WriteBody.module.scss
+++ b/front/src/app/create/_component/PostWrite/WriteBody/WriteBody.module.scss
@@ -14,14 +14,14 @@
   @include font($body1, $regular, $black, $noto-serif);
 }
 
-.left {
+.alignLeft {
   text-align: left;
 }
 
-.center {
+.alignCenter {
   text-align: center;
 }
 
-.right {
+.alignRight {
   text-align: right;
 }
