--- a/front/src/components/WordSeedList/WordSeedList.module.scss
+++ b/front/src/components/WordSeedList/WordSeedList.module.scss
@@ -3,3 +3,11 @@
   flex-direction: column;
   padding: 0 2rem;
 }
+
+.guidance {
+  @include font($fs: $body1, $fw: $regular, $fc: $gray, $ff: $noto-sans);
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  margin-top: 4rem;
+}
