--- a/front/src/components/ContentCard/ContentCard.module.scss
+++ b/front/src/components/ContentCard/ContentCard.module.scss
@@ -20,7 +20,7 @@
   // 이미지 크기임시 값
   width: 100%;
   height: 0;
-  padding-bottom: 125%;
+  padding-bottom: 75%;
 
   img {
     object-fit: cover;
@@ -31,6 +31,7 @@
 
   video {
     max-height: 50rem;
+    object-fit: cover;
     width: 100%;
   }
 
