#151 feat: 구현 - profile feed api 연결

--- a/front/src/components/ContentCard/ContentCard.module.scss
+++ b/front/src/components/ContentCard/ContentCard.module.scss
@@ -59,7 +59,7 @@
 }
 
 .start {
-  text-align: start;
+  text-align: left;
 }
 
 .center {
@@ -67,7 +67,7 @@
 }
 
 .end {
-  text-align: end;
+  text-align: right;
 }
 
 .artist {
