--- a/front/src/components/comment/comment.module.scss
+++ b/front/src/components/comment/comment.module.scss
@@ -10,7 +10,7 @@
   z-index: 2;
   .close {
     @include flex;
-    justify-content: end;
+    justify-content: flex-end;
     padding-right: 1.7rem;
     width: 100%;
     min-height: 5rem;
@@ -18,7 +18,7 @@
   .comment-container {
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: flex-start;
     padding: 4rem;
     gap: 4rem;
     width: 100%;
@@ -30,7 +30,7 @@
     .comment-item {
       @include flex;
       flex-direction: column;
-      align-items: start;
+      align-items: flex-start;
       gap: 0.2rem;
       width: 100%;
 
