#194 feat: 구현 - 정보 수정 get api 연결

--- a/front/src/app/user-info/_component/user-info.module.scss
+++ b/front/src/app/user-info/_component/user-info.module.scss
@@ -22,7 +22,8 @@
     width: 100%;
     border-left: 3px solid $gray;
     padding-left: 0.4rem;
-    textarea {
+    textarea,
+    div {
       @include font($fs: $h4, $fw: $regular, $fc: $gray, $ff: $noto-serif);
       resize: none;
       width: 100%;
