#215 feat: 구현 - wordlist 무한 스크롤 구현

--- a/front/src/components/WordSeed/WordSeed.module.scss
+++ b/front/src/components/WordSeed/WordSeed.module.scss
@@ -19,6 +19,6 @@
   @include font($fs: $body3, $fw: $regular, $fc: $gray, $ff: $noto-sans);
 }
 
-.wordSeed {
+.wordseed {
   @include font($fs: $h3, $fw: $regular, $fc: $black, $ff: $noto-serif);
 }
