#239 fix: 작가명 밑줄 삭제

--- a/front/src/components/feed-interface/feed-interface.module.scss
+++ b/front/src/components/feed-interface/feed-interface.module.scss
@@ -41,6 +41,7 @@
 
 .artist-name {
   @include font($fs: $h3, $fw: $regular, $fc: $gray, $ff: $noto-sans);
+  text-decoration: none;
 }
 
 .button-wrapper {
