--- a/front/src/app/create/_component/PostMedia/PostMedia.module.scss
+++ b/front/src/app/create/_component/PostMedia/PostMedia.module.scss
@@ -24,36 +24,7 @@
 .preview-wrapper {
   @include flex-center();
   height: calc(100% - 6rem);
-}
-
-.media {
-  position: relative;
-  width: 100%;
-  height: 0;
-  padding-bottom: 125%;
-
-  &:not(:has(audio)) {
-    @include shadow-drop1();
-    background-color: $light-gray;
-  }
-
-  img {
-    object-fit: cover;
-  }
-
-  &:has(video) {
-    height: fit-content;
-    padding-bottom: 0;
-  }
-
-  video {
-    max-height: 50rem;
-  }
-
-  &:has(audio) {
-    height: 100%;
-    padding-bottom: 0;
-  }
+  padding: 3rem;
 }
 
 .upload {
