--- a/front/src/components/feed-interface/feed-interface.module.scss
+++ b/front/src/components/feed-interface/feed-interface.module.scss
@@ -64,19 +64,8 @@
   border-radius: 4px;
   z-index: 1;
 
-  li {
-    @include font($fs: $h3, $fw: $body2, $fc: $black, $ff: $noto-sans);
-    text-align: center;
-    list-style: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 50%;
-
-    &:nth-child(1) {
-      border-bottom: 1px solid #ccc;
-    }
+  a {
+    text-decoration: none;
   }
 }
 
